added currency rate
