# api/handler/card.go
@@ -35,3 +35,24 @@ func (h Handler) CreateCard(c *gin.Context) {
 
 	handleResponse(c, h.Log, "Created successfully", http.StatusOK, id)
 }
+
+// @Router		/card/delete/{id} [delete]
+// @Summary		Delete a card
+// @Description	This api delete a card
+// @Tags		Card
+// @Param		id path string true "Card id"
+// @Success		200  {object}  models.Response
+// @Failure		400  {object}  models.Response
+// @Failure		404  {object}  models.Response
+// @Failure		500  {object}  models.Response
+func (h Handler) Delete(c *gin.Context) {
+	id:=c.Param("id")
+
+	err:=h.Service.Card().Delete(c.Request.Context(),id)
+	if err!=nil {
+		handleResponse(c, h.Log, "error while get delete customer", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	handleResponse(c,h.Log,"Get successfully",http.StatusOK,nil)
+}
