# api/models/currency.go
@@ -1,0 +1,7 @@
+package models
+
+type ExchangeRateRequest struct {
+	Amount int `json:"amount"`
+	From  string `json:"from"`
+	To string	`json:"to"`
+}
